# sub

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.debian  README.md  compose.yml  entrypoint.sh
config/: clash.yaml  config.toml
data/: data.toml
src/: config.rs  db.rs  error.rs  errors.rs  log.rs  main.rs  metrics.rs  middleware.rs  models.rs  rate_limiter.rs  state.rs  utils.rs
src/handlers/: auth.rs  clash.rs  health.rs  metrics.rs  mod.rs  subscription.rs  user.rs
src/services/: auth.rs  data.rs  mod.rs  url.rs
web/: REACT_MIGRATION.md  app.jsx  index-react.html  index.html  login.html  main.jsx  package.json  script.js  style-react.css  style.css  vite.config.js
web/components/: ConfirmModal.jsx  Header.jsx  QRModal.jsx  SettingsModal.jsx  UserList.jsx  UserModal.jsx  UserTable.jsx
web/context/: AuthContext.js  NotificationContext.js
web/layouts/: MainLayout.jsx
web/pages/: LoginPage.jsx
web/services/: api.js
