[package]
name = "sub"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.0"
actix-files = "0.6.8"
# 新增鉴权相关依赖
actix-identity = "0.8"
actix-session = { version = "0.10", features = ["cookie-session"] }
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "deflate", "stream"] }
html-escape = "0.2.13"
regex = "1.12.2"
url = "2.5.7"
futures = "0.3.31"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-log = "0.1"
uuid = { version = "1.5", features = ["v4"] }