[package]
name = "sub"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.0"
actix-files = "0.6.8"
# 新增鉴权相关依赖
actix-identity = "0.8"
actix-session = { version = "0.10", features = ["cookie-session"] }
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
# 使用 PostgreSQL 作为后端数据库（sqlx postgres）
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "deflate", "stream"] }
# 移除 regex 和 html-escape，引入更强大的 scraper
scraper = "0.22.0"
# 添加 ego-tree 以便在 main.rs 中使用 ego_tree::NodeId
ego-tree = "0.10.0" 
url = "2.5.7"
futures = "0.3.31"
tracing = "0.1"
# 增加 registry 特性以支持多层订阅者
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }
tracing-log = "0.1"
# 新增日志文件追加器
tracing-appender = "0.2"
# 新增配置管理
config = "0.14"
uuid = { version = "1.5", features = ["v4"] }